Removed unneeded method from data addon. Added more HTML tags to replace upon data conversion.

--- a/_content/02-recordings/11.david-laganella-the-calls-of-gravity.md
+++ b/_content/02-recordings/11.david-laganella-the-calls-of-gravity.md
@@ -1,6 +1,6 @@
 ---
 title: 'David Laganella: The Calls of Gravity'
-release_date: 2010-12-02
+release_date: 2010-12-01
 producer: /producers/new-focus-recordings
 catalog_number: 
 artwork: {{ _site_root }}assets/img/recordings/david-laganella-the-calls-of-gravity.jpg
@@ -22,4 +22,4 @@ quotes:
   -
     quote: "0"
 ---
-PRISM Quartet performs David Laganella's <i>Leafless Trees (2010)</i>.  Other works performed by pianist Marilyn Nonken and Ensemble CMN.
+PRISM Quartet performs David Laganella's *Leafless Trees (2010)*.  Other works performed by pianist Marilyn Nonken and Ensemble CMN.
