--- a/_content/02-recordings/16.escapades-suite-from-catch-me-if-you-can.md
+++ b/_content/02-recordings/16.escapades-suite-from-catch-me-if-you-can.md
@@ -1,6 +1,6 @@
 ---
 title: 'Escapades: Suite from "Catch Me If You Can"'
-release_date: 
+release_date: 1969-12-31
 producer: 
 catalog_number: 
 artwork: 
