--- a/_content/02-recordings/41.urban-thoughts-for-alto-saxophone-and-chamber-orchestra.md
+++ b/_content/02-recordings/41.urban-thoughts-for-alto-saxophone-and-chamber-orchestra.md
@@ -1,6 +1,6 @@
 ---
 title: 'Urban Thoughts for Alto Saxophone and Chamber Orchestra'
-release_date: 
+release_date: 1969-12-31
 producer: 
 catalog_number: 
 artwork: 
