--- a/_content/02-recordings/09.concerto-for-alto-saxophone-and-wind-orchestra.md
+++ b/_content/02-recordings/09.concerto-for-alto-saxophone-and-wind-orchestra.md
@@ -1,6 +1,6 @@
 ---
 title: 'Concerto for Alto Saxophone and Wind Orchestra'
-release_date: 
+release_date: 1969-12-31
 producer: 
 catalog_number: 
 artwork: 
