Removed Optimus plugin.

--- a/_content/_08-facilities/_01.albright-college.md
+++ b/_content/_08-facilities/_01.albright-college.md
@@ -2,7 +2,7 @@
 title: 'Albright College'
 url:
 location:
-  name:
-  latitude: ""
-  longitude: ""
+  name: 'Albright College'
+  latitude: "40.3634371"
+  longitude: "-75.9110212"
 ---
