--- a/_content/06-contact/_01.school.md
+++ b/_content/06-contact/_01.school.md
@@ -1,6 +1,6 @@
 ---
 title: School
-name: 'Dr. Timothy McAllister - TEST'
+name: 'Dr. Timothy McAllister'
 organization: Northwestern University
 unit: Bienen School of Music
 address_1: Regenstein Hall, Room 258
@@ -10,6 +10,3 @@ zip_code: "60208"
 email: timothy.mcallister@northwestern.edu
 artwork: '{{ _site_root }}assets/img/school.jpg'
 ---
-
-
-
