Added Adams Page checkbox for quotes.

--- a/_content/_08-quotes/2009-05-27-jeff-dunn.md
+++ b/_content/_08-quotes/2009-05-27-jeff-dunn.md
@@ -1,5 +1,6 @@
 ---
 title: Jeff Dunn
 source: San Francisco Classical Voice
+adams_press: 0
 ---
 The [Cabrillo Festival Opening] concert's highlight concluded its first half: Jennifer Higdon's Soprano Sax Concerto...and it was superbly realized by soloist Timothy McAllister...This work is a significant testament to beauty.
