--- a/_content/08-news/2014-08-01-welcome.md
+++ b/_content/08-news/2014-08-01-welcome.md
@@ -1,7 +1,7 @@
 ---
 title: Welcome
 page_stylesheet: news
-artwork: '{{ _site_root }}assets/img/tim-news.jpg'
+artwork: '{{ _site_root }}assets/img/prism-news.jpg'
 vertical_position: center
 horizontal_position: center
 ---
