--- a/_content/08-news/2014-08-01-welcome.md
+++ b/_content/08-news/2014-08-01-welcome.md
@@ -4,5 +4,6 @@ page_stylesheet: news
 artwork: '{{ _site_root }}assets/img/prism-news.jpg'
 vertical_position: center
 horizontal_position: center
+background_color: '#efeeec'
 ---
 IPhone Godard Marfa Kickstarter Cosby sweater Odd Future. Williamsburg trust fund farm-to-table cardigan irony hella. Intelligentsia Shoreditch organic hella yr. Direct trade Brooklyn Etsy High Life, skateboard authentic pop-up church-key. Shabby chic quinoa scenester Shoreditch food truck. Portland 3 wolf moon Carles direct trade, Blue Bottle try-hard freegan narwhal Wes Anderson gentrify Echo Park. Trust fund pour-over Odd Future slow-carb, shabby chic whatever jean shorts twee.
