--- a/_content/_08-live-recordings/_05.csardas.md
+++ b/_content/_08-live-recordings/_05.csardas.md
@@ -1,5 +1,5 @@
 ---
 title: 'Csardas'
 composer: Vittorio Monti
-sample: {{ _site_root }}assets/audio/live-performances/csardas.mp3
+sample: {{ _site_root }}assets/audio/csardas.mp3
 ---
