--- a/_content/404.md
+++ b/_content/404.md
@@ -1,8 +1,11 @@
 ---
-artwork: '{{ _site_root }}assets/img/tim-404.jpg'
+artwork: '{{ _site_root }}assets/img/tim-9.jpg'
+vertical_position: center
+horizontal_position: right
+background_color: '#111'
 page_stylesheet: 404
-title: We hit a wrong note!
 theme: dark
+title: You've hit a wrong note
 ---
 Perhaps you are looking for the following:
 
