Added quotation marks around all imported quotes.

--- a/_content/_08-quotes/2013-09-24-tim-smith.md
+++ b/_content/_08-quotes/2013-09-24-tim-smith.md
@@ -3,4 +3,4 @@ title: Tim Smith
 source: The Baltimore Sun (Sept. 2013)
 adams_press: 0
 ---
-the score deftly fuses classical and jazz elements to create a cohesive, arresting experience...it was written to match the talents of Tim McAllister, a sterling saxophonist who can handle those elements effortlessly...a kinetic, ecstatic ride that achieves giddy heights along the way...McAllister's splendid playing drew a hearty ovation from the audience and orchestra
+"the score deftly fuses classical and jazz elements to create a cohesive, arresting experience...it was written to match the talents of Tim McAllister, a sterling saxophonist who can handle those elements effortlessly...a kinetic, ecstatic ride that achieves giddy heights along the way...McAllister's splendid playing drew a hearty ovation from the audience and orchestra"
