--- a/_content/_08-quotes/2009-05-27-jeff-dunn.md
+++ b/_content/_08-quotes/2009-05-27-jeff-dunn.md
@@ -3,4 +3,4 @@ title: Jeff Dunn
 source: San Francisco Classical Voice
 adams_press: 0
 ---
-The [Cabrillo Festival Opening] concert's highlight concluded its first half: Jennifer Higdon's Soprano Sax Concerto...and it was superbly realized by soloist Timothy McAllister...This work is a significant testament to beauty.
+"The [Cabrillo Festival Opening] concert's highlight concluded its first half: Jennifer Higdon's Soprano Sax Concerto...and it was superbly realized by soloist Timothy McAllister...This work is a significant testament to beauty."
