--- a/_content/_08-quotes/2009-10-10-mark-swed.md
+++ b/_content/_08-quotes/2009-10-10-mark-swed.md
@@ -3,4 +3,4 @@ title: Mark Swed
 source: Los Angeles Times
 adams_press: 0
 ---
-[City Noir's] second movement, &#8220;The Song Is for You,&#8221; is softer and, on the surface, sweeter than the first, and jazzy. I heard hints of Gershwin in the horns after a flamboyant saxophone solo played by Timothy McAllister.
+"[City Noir's] second movement, &#8220;The Song Is for You,&#8221; is softer and, on the surface, sweeter than the first, and jazzy. I heard hints of Gershwin in the horns after a flamboyant saxophone solo played by Timothy McAllister."
