Fixed 404 page layout

--- a/_content/404.md
+++ b/_content/404.md
@@ -2,17 +2,13 @@
 artwork: '{{ _site_root }}assets/img/tim-9.jpg'
 vertical_position: center
 horizontal_position: right
-background_color: '#111'
+background_color: '#0B0A07'
 page_stylesheet: 404
 theme: dark
-title: You've hit a wrong note
+title: Page Not Found
 ---
-Perhaps you are looking for the following:
+Perhaps you are here because:
 
-<ul class="no-bullets" id="sitemap">
-{{ nav from="/" include_content="true" max_depth="1" }}
-    <li><a href="{{ url }}"><span data-icon="{{ page_icon }}">{{ title }}</span></a></li>
-{{ /nav }}
-</ul>
-
-If in doubt, visit the <a class="link" href="/">Home Page</a> to get back on track.
+- The page has moved
+- The page no longer exists
+- There was technical issue on our end
