Updated summer photo

--- a/_content/07-contact/_01.school.md
+++ b/_content/07-contact/_01.school.md
@@ -1,5 +1,5 @@
 ---
-title: School
+title: School Address
 name: Dr. Timothy McAllister
 organization: The University of Michigan
 unit: School of Music, Theatre and Dance
@@ -12,5 +12,3 @@ artwork: '{{ _site_root }}assets/img/school.jpg'
 position: Associate Professor of Saxophone
 address_2: 1100 Baits Drive
 ---
-
-
