--- a/_content/08-news/2014-08-12-welcome.md
+++ b/_content/08-news/2014-08-12-welcome.md
@@ -5,6 +5,7 @@ artwork: '{{ _site_root }}assets/img/prism.jpg'
 vertical_position: center
 horizontal_position: center
 background_color: '#efeeec'
+enable_scrim: true
 quotes:
   -
     quote: /quotes/jeremy-eichler
