--- a/_content/08-news/2014-08-17-welcome.md
+++ b/_content/08-news/2014-08-17-welcome.md
@@ -4,6 +4,7 @@ page_stylesheet: news
 artwork: '{{ _site_root }}assets/img/prism.jpg'
 vertical_position: center
 horizontal_position: center
+quote_position: right
 background_color: '#efeeec'
 enable_scrim: true
 ---
