Updated start times

--- a/_content/03-performances/1999-12-02-composer-colloquium___1407093105.md
+++ b/_content/03-performances/1999-12-02-composer-colloquium___1407093105.md
@@ -1,12 +1,12 @@
 ---
 title: 'Composer Colloquium'
-event_time: 09:44 AM
+event_time: 08:00 PM
 location: Stony Brook University
 latitude: 40.9130959
 longitude: -73.1235863
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
 Works by Denisov, Rogers, Albright
