--- a/_content/03-performances/2000-02-07-performance___1407093102.md
+++ b/_content/03-performances/2000-02-07-performance___1407093102.md
@@ -1,12 +1,12 @@
 ---
 title: 'Performance'
-event_time: 09:48 AM
-location: 
+event_time: 08:00 PM
+location:
 latitude: 0
 longitude: 0
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
 Work by Webern, Jolas, Albright, Cage, Chambers
