--- a/_content/03-performances/2000-02-25-guest-artist-recital___1407093099.md
+++ b/_content/03-performances/2000-02-25-guest-artist-recital___1407093099.md
@@ -1,12 +1,12 @@
 ---
 title: 'Guest Artist Recital'
-event_time: 08:51 AM
+event_time: 08:00 PM
 location: University Drive
 latitude: 42.649648
 longitude: -83.270174
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
 Works by Debussy, Mead, Steinberg, Lauba, Stockhausen, Chambers
