--- a/_content/03-performances/1999-05-16-ann-arbor-springfest___1407093121.md
+++ b/_content/03-performances/1999-05-16-ann-arbor-springfest___1407093121.md
@@ -1,11 +1,11 @@
 ---
 title: 'Ann Arbor Springfest'
-event_time: 09:19 AM
+event_time: 08:00 PM
 location: Ann Arbor
 latitude: 42.2808256
 longitude: -83.7430378
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
