--- a/_content/03-performances/1999-05-24-quorum___1407093117.md
+++ b/_content/03-performances/1999-05-24-quorum___1407093117.md
@@ -1,12 +1,12 @@
 ---
 title: 'QUORUM'
-event_time: 09:22 AM
+event_time: 08:00 PM
 location: Merkin Concert Hall-Kaufman
 latitude: 40.7742367
 longitude: -73.9811285
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
 Works by Rush, Chambers, Stockhausen, McCarthy, Webern
