--- a/_content/03-performances/1999-06-11-prism-quartet___1407093115.md
+++ b/_content/03-performances/1999-06-11-prism-quartet___1407093115.md
@@ -1,11 +1,11 @@
 ---
 title: 'PRISM Quartet'
-event_time: 09:26 AM
+event_time: 08:00 PM
 location: Philadelphia Ethical Society
 latitude: 39.9494655
 longitude: -75.1718643
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
