--- a/_content/03-performances/1999-07-23-prism-quartet___1407093111.md
+++ b/_content/03-performances/1999-07-23-prism-quartet___1407093111.md
@@ -1,12 +1,12 @@
 ---
 title: 'PRISM Quartet'
-event_time: 09:32 AM
+event_time: 08:00 PM
 location: Walden School
 latitude: 38.2615275
 longitude: -85.6375846
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
 Works by D'Rivera, Hsu, Levy, Albright, Sung, Higdon, Browning
