--- a/_content/03-performances/1999-10-29-performance___1407093108.md
+++ b/_content/03-performances/1999-10-29-performance___1407093108.md
@@ -1,12 +1,12 @@
 ---
 title: 'Performance'
-event_time: 09:39 AM
-location: 
+event_time: 08:00 PM
+location:
 latitude: 0
 longitude: 0
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
 <p>Works by Carter, Broening, Wanamaker</p>
