--- a/_content/03-performances/1999-11-14-performance___1407093107.md
+++ b/_content/03-performances/1999-11-14-performance___1407093107.md
@@ -1,11 +1,11 @@
 ---
 title: 'Performance'
-event_time: 09:41 AM
+event_time: 08:00 PM
 location: Washingtonville
 latitude: 41.4278716
 longitude: -74.1659798
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
