--- a/_content/03-performances/2000-02-24-guest-artist-recital___1407093100.md
+++ b/_content/03-performances/2000-02-24-guest-artist-recital___1407093100.md
@@ -1,12 +1,12 @@
 ---
 title: 'Guest Artist Recital'
-event_time: 09:50 AM
+event_time: 08:00 PM
 location: University of Michigan
 latitude: 42.2780436
 longitude: -83.7382241
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
 Works by Debussy, Mead, Steinberg, Lauba, Stockhausen, Chambers
