--- a/_content/03-performances/2000-06-20-prism-quartet___1407093082.md
+++ b/_content/03-performances/2000-06-20-prism-quartet___1407093082.md
@@ -1,12 +1,12 @@
 ---
 title: 'PRISM Quartet'
-event_time: 10:10 AM
+event_time: 08:00 PM
 location: New York
 latitude: 40.7127837
 longitude: -74.0059413
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
 Works by Xenakis, Keuris, Donatoni, Ticheli (Premiere)
