--- a/_content/03-performances/2000-06-24-prism-quartet___1407093080.md
+++ b/_content/03-performances/2000-06-24-prism-quartet___1407093080.md
@@ -1,12 +1,12 @@
 ---
 title: 'PRISM Quartet'
-event_time: 09:10 AM
+event_time: 08:00 PM
 location: Philadelphia
 latitude: 39.952335
 longitude: -75.163789
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
 Works by Xenakis, Keuris, Donatoni, Ticheli (Premiere)
