--- a/_content/03-performances/2001-02-06-guest-artist-series___1407093059.md
+++ b/_content/03-performances/2001-02-06-guest-artist-series___1407093059.md
@@ -1,13 +1,13 @@
 ---
 title: 'Guest Artist Series'
-event_time: 11:43 AM
+event_time: 08:00 PM
 location: Eastern Michigan University
 latitude: 42.2505512
 longitude: -83.6246896
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
 Pease Auditorium
 
