--- a/_content/03-performances/2001-04-14-performance___1407093053.md
+++ b/_content/03-performances/2001-04-14-performance___1407093053.md
@@ -1,11 +1,11 @@
 ---
 title: 'Performance'
-event_time: 11:51 AM
+event_time: 08:00 PM
 location: Lincoln Theater
 latitude: 38.862836
 longitude: -76.992508
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
