--- a/_content/03-performances/2001-04-28-performance___1407093051.md
+++ b/_content/03-performances/2001-04-28-performance___1407093051.md
@@ -1,11 +1,11 @@
 ---
 title: 'Performance'
-event_time: 11:53 AM
+event_time: 08:00 PM
 location: Indiana University
 latitude: 39.1691355
 longitude: -86.5149053
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
