--- a/_content/03-performances/2001-07-13-faculty-recital___1407093047.md
+++ b/_content/03-performances/2001-07-13-faculty-recital___1407093047.md
@@ -1,12 +1,12 @@
 ---
 title: 'Faculty Recital'
-event_time: 10:57 AM
-location: 
+event_time: 08:00 PM
+location:
 latitude: 0
 longitude: 0
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
 Works by William Albright, R. Vaughan-Williams
