Updated start times

--- a/_content/03-performances/2004-09-21-prism-quartet___1407092905.md
+++ b/_content/03-performances/2004-09-21-prism-quartet___1407092905.md
@@ -1,11 +1,11 @@
 ---
 title: 'PRISM Quartet'
-event_time: 08:58 AM
+event_time: 08:00 PM
 location: Nyack
 latitude: 41.0906519
 longitude: -73.9179146
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
