--- a/_content/03-performances/2004-10-28-prism-quartet-tour___1407092895.md
+++ b/_content/03-performances/2004-10-28-prism-quartet-tour___1407092895.md
@@ -1,11 +1,11 @@
 ---
 title: 'PRISM Quartet Tour'
-event_time: 09:46 AM
-location: 
+event_time: 08:00 PM
+location:
 latitude: 0
 longitude: 0
-performance_url: 
-ticket_information_url: 
-ensemble: 
-conductor: 
+performance_url:
+ticket_information_url:
+ensemble:
+conductor:
 ---
