Updated vcard markup

--- a/_content/08-contact/_01.school.md
+++ b/_content/08-contact/_01.school.md
@@ -9,6 +9,6 @@ state: MI
 zip_code: 48109-2085
 email: mcallitp@gmail.com
 artwork: '{{ _site_root }}assets/img/school.jpg'
-position: Associate Professor of Saxophone
+role: Associate Professor of Saxophone
 address_2: 1100 Baits Drive
 ---
