--- a/_content/08-contact/_02.summer.md
+++ b/_content/08-contact/_02.summer.md
@@ -1,7 +1,7 @@
 ---
 title: Summer Address
 name: Timothy McAllister
-position:
+role:
 organization: Interlochen Center for the Arts
 unit: Music Faculty
 address_1: P.O. Box 199
